--- a/experimental.tex
+++ b/experimental.tex
@@ -615,7 +615,9 @@ Los resultados experimentales se muestran en la Tabla \ref{table:korat-beapi}.
 s 8,9 y 10. Hay que revisar todo.}
 La Tabla presenta una muestra representativa de los resultados para los benchmarks
 \textsf{Korat}, \textsf{FAJITA}, \textsf{ROOPS} y \textsf{Kiasan} (intentamos mantener la misma proporción de casos buenos y malos para cada técnica en los datos que reportamos). \pp{Los casos
-restantes se pueden encontrar online \cite{}}.
+restantes se pueden encontrar online \cite{}. Queda raro que esta tabla sea la
+única que esté recortada en la tesis. hay que ver si se puede hacer algo al
+respecto.}.
 Para cada clase evaluada, informamos los tiempos de generación 
 (en segundos, columna \emph{Time}), la cantidad de estructuras válidas generadas (\emph{Generated}) y el total de estructuras exploradas (\emph{Explored}) por cada técnica. 
 Incluimos, para cada enfoque, los \emph{scopes} más grandes (columna \emph{S})
