--- a/tables/optimizaciones.tex
+++ b/tables/optimizaciones.tex
@@ -57,7 +57,8 @@
   \bottomrule
 
 \end{tabular}
-\caption{Tiempos de generacion de acuerdo a las optimizaciones propuestas}
+\caption{Impacto de las optimizaciones de BEAPI en su tiempo de
+ejecución}
 \label{tab:results-realWorld}
 
 \end{table}
